// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectNetwork should render 1`] = `
<div>
  <div>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="downshift-1-menu"
      data-testid="SelectNetwork"
      role="combobox"
    >
      <label
        for="downshift-0-input"
        id="downshift-1-label"
      />
      <div
        class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
        data-testid="SelectNetworkInput"
      >
        <div
          class="InputGroup__InputAddonStyle-sc-1obbdqe-0 InputGroup__InputAddonStartStyle-sc-1obbdqe-1 epSJiV gnQfLB px-4"
        >
          <div
            class="Circle-uw7h4j-0 blBpcG border-theme-secondary-200 dark:border-theme-secondary-700 text-theme-secondary-500"
            data-testid="SelectNetworkInput__network"
          />
        </div>
        <input
          aria-autocomplete="list"
          aria-controls="downshift-1-menu"
          aria-labelledby="downshift-1-label"
          autocomplete="off"
          class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures pl-15"
          data-testid="SelectNetworkInput__input"
          id="downshift-0-input"
          placeholder="Enter a cryptoasset name"
          value=""
        />
      </div>
    </div>
    <div
      class=""
    >
      <ul
        aria-labelledby="downshift-1-label"
        class="grid grid-cols-6 gap-3"
        id="downshift-1-menu"
        role="listbox"
      />
    </div>
  </div>
</div>
`;

exports[`SelectNetwork should render with networks 1`] = `
<div>
  <div>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="downshift-5-menu"
      data-testid="SelectNetwork"
      role="combobox"
    >
      <label
        for="downshift-4-input"
        id="downshift-5-label"
      />
      <div
        class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
        data-testid="SelectNetworkInput"
      >
        <div
          class="InputGroup__InputAddonStyle-sc-1obbdqe-0 InputGroup__InputAddonStartStyle-sc-1obbdqe-1 epSJiV gnQfLB px-4"
        >
          <div
            class="Circle-uw7h4j-0 blBpcG border-theme-secondary-200 dark:border-theme-secondary-700 text-theme-secondary-500"
            data-testid="SelectNetworkInput__network"
          />
        </div>
        <input
          aria-autocomplete="list"
          aria-controls="downshift-5-menu"
          aria-labelledby="downshift-5-label"
          autocomplete="off"
          class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures pl-15"
          data-testid="SelectNetworkInput__input"
          id="downshift-4-input"
          placeholder="Enter a cryptoasset name"
          value=""
        />
      </div>
    </div>
    <div
      class="mt-6"
    >
      <div
        class="font-bold text-sm text-theme-secondary-400 dark:text-theme-secondary-700 mb-3"
      >
        PUBLIC NETWORKS
      </div>
      <ul
        aria-labelledby="downshift-5-label"
        class="grid grid-cols-6 gap-3"
        id="downshift-5-menu"
        role="listbox"
      >
        <li
          class="inline-block cursor-pointer h-21"
          data-testid="SelectNetwork__NetworkIcon--container"
        >
          <div
            aria-label="ARK"
            class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
            data-testid="NetworkIcon-ARK-ark.mainnet"
          >
            <div
              class="sc-bdfBwQ caqoGN"
              data-testid="NetworkIcon__icon"
              height="30"
              width="30"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
        </li>
        <li
          class="inline-block cursor-pointer h-21"
          data-testid="SelectNetwork__NetworkIcon--container"
        >
          <div
            aria-label="Compendia"
            class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
            data-testid="NetworkIcon-ARK-compendia.mainnet"
          >
            <div
              class="sc-bdfBwQ caqoGN"
              data-testid="NetworkIcon__icon"
              height="30"
              width="30"
            >
              <svg>
                bind.svg
              </svg>
            </div>
          </div>
        </li>
        <li
          class="inline-block cursor-pointer h-21"
          data-testid="SelectNetwork__NetworkIcon--container"
        >
          <div
            aria-label="Bitcoin"
            class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
            data-testid="NetworkIcon-BTC-btc.livenet"
          >
            <div
              class="sc-bdfBwQ caqoGN"
              data-testid="NetworkIcon__icon"
              height="30"
              width="30"
            >
              <svg>
                btc.svg
              </svg>
            </div>
          </div>
        </li>
        <li
          class="inline-block cursor-pointer h-21"
          data-testid="SelectNetwork__NetworkIcon--container"
        >
          <div
            aria-label="Ethereum"
            class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
            data-testid="NetworkIcon-ETH-eth.mainnet"
          >
            <div
              class="sc-bdfBwQ caqoGN"
              data-testid="NetworkIcon__icon"
              height="30"
              width="30"
            >
              <svg>
                eth.svg
              </svg>
            </div>
          </div>
        </li>
        <li
          class="inline-block cursor-pointer h-21"
          data-testid="SelectNetwork__NetworkIcon--container"
        >
          <div
            aria-label="Lisk"
            class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
            data-testid="NetworkIcon-LSK-lsk.mainnet"
          >
            <div
              class="sc-bdfBwQ caqoGN"
              data-testid="NetworkIcon__icon"
              height="30"
              width="30"
            >
              <svg>
                lsk.svg
              </svg>
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div
      class="mt-6"
    >
      <div
        class="font-bold text-sm text-theme-secondary-400 dark:text-theme-secondary-700 mb-3"
      >
        DEVELOPMENT NETWORKS
      </div>
      <ul
        aria-labelledby="downshift-5-label"
        class="grid grid-cols-6 gap-3"
        id="downshift-5-menu"
        role="listbox"
      >
        <li
          class="inline-block cursor-pointer h-21"
          data-testid="SelectNetwork__NetworkIcon--container"
        >
          <div
            aria-label="ARK Devnet"
            class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-300"
            data-testid="NetworkIcon-ARK-ark.devnet"
          >
            <div
              class="sc-bdfBwQ caqoGN"
              data-testid="NetworkIcon__icon"
              height="30"
              width="30"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
        </li>
        <li
          class="inline-block cursor-pointer h-21"
          data-testid="SelectNetwork__NetworkIcon--container"
        >
          <div
            aria-label="Lisk Testnet"
            class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-300"
            data-testid="NetworkIcon-LSK-lsk.testnet"
          >
            <div
              class="sc-bdfBwQ caqoGN"
              data-testid="NetworkIcon__icon"
              height="30"
              width="30"
            >
              <svg>
                lsk.svg
              </svg>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
